--- a/index.html
+++ b/index.html
@@ -35,20 +35,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
-            <li><a class="nav-link" href="#" style="padding-left: 0;">Account</a></li>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Sign up</a></li>
-                <li><a class="dropdown-item" href="#">Log in</a></li>
-                <li><hr class="dropdown-divider" /></li>
-              </ul>
-            </li>
+            <li><a class="nav-link" href="content/account.html" style="padding-left: 0;">Account</a></li>
             <li class="nav-item">
               <a class="nav-link" href="content/forum.html">Forum</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="about" href="#">About</a>
+              <a class="nav-link" href="#" >About</a>
             </li>
           </ul>
         </div>
