--- a/content/account.html
+++ b/content/account.html
@@ -38,7 +38,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
-            <li><a class="nav-link" href="account.html" style="padding-left: 0;">Account</a></li>
+            <li><a class="nav-link" href="profile.html" style="padding-left: 0;">Account</a></li>
             <li class="nav-item">
               <a class="nav-link" href="forum.html">Forum</a>
             </li>
