--- a/content/profile.html
+++ b/content/profile.html
@@ -11,9 +11,14 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" type="text/css" href="../design/main.css">
     <link rel="stylesheet" type="text/css" href="../design/fonts.css">
     <link rel="stylesheet" type="text/css" href="../design/forum.css">
+    <link rel="stylesheet" type="text/css" href="../design/account.css">
   </head>
   <body>
   <nav class="navbar navbar-expand-lg d-flex justify-content-evenly">
@@ -38,7 +43,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
-            <li><a class="nav-link" href="profile.html">Account</a></li>
+            <li><a class="nav-link" href="profile./html">Account</a></li>
             <li class="nav-item">
               <a class="nav-link" href="forum.html">Forum</a>
             </li>
@@ -46,33 +51,49 @@
         </div>
       </div>
     </nav>
-      <div class="poems">
-            <div class="card" style="width: 18rem;">
+    
+    <section>
+      <div id="photo">
+        <i class="bi bi-person-fill"></i>
+        <h1>Username</h1>
+      </div>
+      <div id="content">
+        <h1>Archive:</h1>
+        <div id="archive">
+          <div class="card" style="width: 18rem;">
             <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
             <div class="card-body">
               <h5 class="card-title">Poem title</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
               <a href="#" class="btn btn-primary">Read Poem</a>
             </div>
-
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
+            <div class="card-body">
+              <h5 class="card-title">Poem title</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
+              <a href="#" class="btn btn-primary">Read Poem</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
+            <div class="card-body">
+              <h5 class="card-title">Poem title</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
+              <a href="#" class="btn btn-primary">Read Poem</a>
+            </div>
+          </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <h1>Your Posts:</h1>
+          <div id="posts">
+          <div class="card" style="width: 18rem;">
             <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
             <div class="card-body">
               <h5 class="card-title">Poem title</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
               <a href="#" class="btn btn-primary">Read Poem</a>
             </div>
-
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
-            <div class="card-body">
-              <h5 class="card-title">Poem title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
-              <a href="#" class="btn btn-primary">Read Poem</a>
-            </div>
-
         </div>
         <div class="card" style="width: 18rem;">
             <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
@@ -82,23 +103,7 @@
               <a href="#" class="btn btn-primary">Read Poem</a>
             </div>
           </div>
-            <div class="card" style="width: 18rem;">
-            <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
-            <div class="card-body">
-              <h5 class="card-title">Poem title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
-              <a href="#" class="btn btn-primary">Read Poem</a>
-            </div>
-          </div>
-            <div class="card" style="width: 18rem;">
-            <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
-            <div class="card-body">
-              <h5 class="card-title">Poem title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
-              <a href="#" class="btn btn-primary">Read Poem</a>
-            </div>
-          </div>
-            <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 18rem;">
             <img src="../images/copac.jpeg" class="card-img-top" alt="an image related to the poem">
             <div class="card-body">
               <h5 class="card-title">Poem title</h5>
@@ -107,6 +112,7 @@
             </div>
           </div>
       </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
