--- a/content/signUp.html
+++ b/content/signUp.html
@@ -18,7 +18,7 @@
   <body>
   <nav class="navbar navbar-expand-lg d-flex justify-content-evenly">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           Poet<i class="fa-solid fa-pencil fa-bounce"></i>ca</a
         >
         <button
@@ -56,6 +56,18 @@
       <input type="text" name="confirm-password" placeholder="Confirm Password">
       <button class="button">Sign up</button>
     </form>
+    <footer>
+      <div id="about">
+        <h1>About Us</h1>
+        <p>Welcome to our poetry generator site, where words come to life and emotions are expressed through verse! Our website is committed to giving you a dynamic and imaginative space to discover the beauty of poetry.
+With our advanced algorithm, you can generate unique and personalized poems in seconds. Whether you are looking to express your feelings, commemorate a special occasion, or simply enjoy the art of poetry, our generator has something for everyone.</p>
+      </div>
+      <div id="dev">
+        <p>Back-end developer: Chiriac Theodor</p>
+        <p>Front-end developer: Pirvanescu Marian</p>
+        <p>Web designer: Ungureanu Alexandra</p>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
