--- a/content/profile.html
+++ b/content/profile.html
@@ -57,6 +57,7 @@
         <i class="bi bi-person-fill"></i>
         <h1>Username</h1>
       </div>
+      <span id="signout">Sign Out</span>
       <div id="content">
         <h1>Archive:</h1>
         <div id="archive">
@@ -66,6 +67,7 @@
               <h5 class="card-title">Poem title</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
               <a href="#" class="btn btn-primary">Read Poem</a>
+              <i class="bi bi-trash-fill"></i>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -74,6 +76,7 @@
               <h5 class="card-title">Poem title</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
               <a href="#" class="btn btn-primary">Read Poem</a>
+              <i class="bi bi-trash-fill"></i>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -82,6 +85,7 @@
               <h5 class="card-title">Poem title</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
               <a href="#" class="btn btn-primary">Read Poem</a>
+              <i class="bi bi-trash-fill"></i>
             </div>
           </div>
         </div>
@@ -93,6 +97,7 @@
               <h5 class="card-title">Poem title</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
               <a href="#" class="btn btn-primary">Read Poem</a>
+              <i class="bi bi-trash-fill"></i>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -101,6 +106,7 @@
               <h5 class="card-title">Poem title</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
               <a href="#" class="btn btn-primary">Read Poem</a>
+              <i class="bi bi-trash-fill"></i>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -109,6 +115,7 @@
               <h5 class="card-title">Poem title</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus metus tellus, feugiat id dui vitae, suscipit ultricies erat. Morbi et ultricies dolor, quis imperdiet nulla. Fusce efficitur, justo a luctus blandit, ipsum eros tristique risus, et sodales ligula eros quis elit. Fusce porta sem quis metus vehicula placerat. Nulla sed augue non odio maximus ullamcorper quis nec mi. Nam et tortor in mauris volutpat semper id et lorem. Quisque scelerisque metus sed consequat iaculis. Nam aliquam sem eget malesuada cursus. Integer non urna elit. Cras dictum commodo mauris eu convallis. Suspendisse eu pharetra tellus.</p>
               <a href="#" class="btn btn-primary">Read Poem</a>
+              <i class="bi bi-trash-fill"></i>
             </div>
           </div>
       </div>
